cambios para login desde front app

--- a/module/Application/view/application/login/index.phtml
+++ b/module/Application/view/application/login/index.phtml
@@ -1,2 +1,9 @@
-
-login view
+<div>
+    <form name="loginForm" action="/login/login">
+        <ul>
+            <li><label for="userName">Usuario</label><input type="text" name="userName" id="userName"></li>
+            <li><label for="password">Password</label><input type="text" name="password" id="password"></li>
+            <li><input type="submit" value="Log in" name="logIn"></li>
+        </ul>
+    </form>
+</div>
