--- a/module/Application/view/application/login/index.phtml
+++ b/module/Application/view/application/login/index.phtml
@@ -3,7 +3,7 @@
 ?>
 
 <div>
-    <?php echo $this->form()->openTag($form); ?>`
+    <?php echo $this->form()->openTag($form); ?>
         <ul>
             <li><?php echo $this->formRow($form->get('userName')); ?></li>
             <li><?php echo $this->formRow($form->get('userPassword')); ?></li>
