cambios rest service login seguridad

--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -1,1 +1,5 @@
+Hola <?php echo $this->userName; ?>
+<a href="<?php echo $this->url('application', array('controller'=>'login')); ?>">Salir</a> <br>
+
+
 index application
